# xiaomi_mi_scale

./: .gitignore  Dockerfile  README.md  docker-compose.yml  options.json  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  run-poetry-update.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: main.yml
dockerscripts/: cmd.sh  entrypoint.sh
src/: Xiaomi_Scale.py  Xiaomi_Scale_Body_Metrics.py  body_scales.py  body_score.py  requirements.txt
testing/: docker-compose.yml  mosquitto.conf  xiaomi_mi_scale_options.json
