[tool.poetry]
name = "xiaomi-mi-scale"
version = "0.3.5"
description = "Connector for Xiaomi Mi Scale"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bleak = "0.18.0"
paho-mqtt = "1.5.0"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
